media screen header

--- a/index.html
+++ b/index.html
@@ -22,21 +22,26 @@
                 <a href="">(514)776-9917</a>
             </div>
             <div class="header__downmenu">
-                <ul class="nav">
+                
+                <ul class="header__nav">
                     <li class="nav__list"><a class="link" href="#">Air Climatisé</a></li>
                     <li class="nav__list"><a class="link" href="#">Thermopompe</a></li>
                     <li class="nav__list"><a class="link" href="#">Chauffage</a></li>
                     <li class="nav__list"><a class="link" href="#">Financement sur 120 mois</a></li>
                     <li class="nav__list"><a class="link" href="#">Demande de soumission</a></li>
+                    <div class="nav__list">
+                        <a class="link" href="">Rechercher</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 18">
+                            <path
+                                d="M18.0323 15.9569L15.1126 13.4173C15.6078 12.7377 15.9908 11.992 16.2615 11.18C16.5321 10.368 16.6674 9.52435 16.6674 8.64903C16.6559 7.53183 16.4371 6.48374 16.0109 5.50476C15.5848 4.51426 15.006 3.65333 14.2747 2.92197C13.5433 2.19061 12.6824 1.61186 11.6919 1.18571C10.7129 0.759567 9.66483 0.546494 8.54763 0.546494C7.71838 0.546494 6.92367 0.661669 6.16352 0.892017C5.39185 1.13388 4.68065 1.47365 4.02991 1.91131C3.37917 2.34898 2.79466 2.87302 2.27638 3.48345C1.76961 4.10539 1.36074 4.79644 1.04977 5.55659C0.727277 6.31674 0.531481 7.09417 0.462376 7.88888C0.381754 8.68358 0.419185 9.46677 0.574671 10.2384C0.730157 11.0101 0.997938 11.753 1.37801 12.4671C1.74657 13.1696 2.21879 13.8146 2.79466 14.402C3.38205 14.9779 4.02703 15.4558 4.72959 15.8359C5.44368 16.2045 6.18655 16.4665 6.95822 16.622C7.72989 16.7775 8.51308 16.8149 9.30779 16.7343C10.114 16.6652 10.8972 16.4751 11.6573 16.1642C11.9683 16.026 12.2707 15.8734 12.5643 15.7064C12.858 15.5393 13.1373 15.3579 13.4022 15.1622L16.4429 17.7881C16.6271 17.9494 16.8402 18.0214 17.0821 18.0041C17.3239 17.9868 17.5255 17.886 17.6867 17.7018L18.1186 17.2007C18.2799 17.0165 18.3519 16.8034 18.3346 16.5615C18.3173 16.3197 18.2165 16.1181 18.0323 15.9569ZM8.54763 14.7302C7.92569 14.7302 7.33254 14.6439 6.76819 14.4711C6.19231 14.2868 5.65963 14.0334 5.17014 13.711C4.68065 13.3885 4.2401 12.9969 3.84851 12.5362C3.46843 12.064 3.16322 11.5457 2.93287 10.9813C2.691 10.417 2.54128 9.83533 2.48369 9.23642C2.43762 8.63751 2.46929 8.05012 2.57871 7.47425C2.68813 6.89837 2.8868 6.34554 3.17474 5.81573C3.45116 5.27441 3.8082 4.79068 4.24586 4.36453C4.68353 3.92687 5.16726 3.56983 5.69706 3.29341C6.22686 3.00547 6.7797 2.80392 7.35558 2.68874C7.93145 2.57357 8.51884 2.54477 9.11775 2.60236C9.71666 2.65995 10.2983 2.80392 10.8626 3.03427C11.4385 3.27613 11.9568 3.5871 12.4175 3.96718C12.8782 4.34726 13.2727 4.78204 13.6009 5.27153C13.9292 5.76102 14.1797 6.29371 14.3524 6.86958C14.5252 7.44545 14.6116 8.0386 14.6116 8.64903C14.6116 9.4898 14.4561 10.2787 14.1451 11.0159C13.8226 11.753 13.3878 12.398 12.8408 12.9508C12.2937 13.5036 11.6516 13.9413 10.9145 14.2638C10.1774 14.5748 9.38841 14.7302 8.54763 14.7302Z" />
+                        </svg>
+                    </div>
                 </ul>
-                <div class="nav__list">
-                    <a class="link" href="">Rechercher</a>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 18">
-                        <path
-                            d="M18.0323 15.9569L15.1126 13.4173C15.6078 12.7377 15.9908 11.992 16.2615 11.18C16.5321 10.368 16.6674 9.52435 16.6674 8.64903C16.6559 7.53183 16.4371 6.48374 16.0109 5.50476C15.5848 4.51426 15.006 3.65333 14.2747 2.92197C13.5433 2.19061 12.6824 1.61186 11.6919 1.18571C10.7129 0.759567 9.66483 0.546494 8.54763 0.546494C7.71838 0.546494 6.92367 0.661669 6.16352 0.892017C5.39185 1.13388 4.68065 1.47365 4.02991 1.91131C3.37917 2.34898 2.79466 2.87302 2.27638 3.48345C1.76961 4.10539 1.36074 4.79644 1.04977 5.55659C0.727277 6.31674 0.531481 7.09417 0.462376 7.88888C0.381754 8.68358 0.419185 9.46677 0.574671 10.2384C0.730157 11.0101 0.997938 11.753 1.37801 12.4671C1.74657 13.1696 2.21879 13.8146 2.79466 14.402C3.38205 14.9779 4.02703 15.4558 4.72959 15.8359C5.44368 16.2045 6.18655 16.4665 6.95822 16.622C7.72989 16.7775 8.51308 16.8149 9.30779 16.7343C10.114 16.6652 10.8972 16.4751 11.6573 16.1642C11.9683 16.026 12.2707 15.8734 12.5643 15.7064C12.858 15.5393 13.1373 15.3579 13.4022 15.1622L16.4429 17.7881C16.6271 17.9494 16.8402 18.0214 17.0821 18.0041C17.3239 17.9868 17.5255 17.886 17.6867 17.7018L18.1186 17.2007C18.2799 17.0165 18.3519 16.8034 18.3346 16.5615C18.3173 16.3197 18.2165 16.1181 18.0323 15.9569ZM8.54763 14.7302C7.92569 14.7302 7.33254 14.6439 6.76819 14.4711C6.19231 14.2868 5.65963 14.0334 5.17014 13.711C4.68065 13.3885 4.2401 12.9969 3.84851 12.5362C3.46843 12.064 3.16322 11.5457 2.93287 10.9813C2.691 10.417 2.54128 9.83533 2.48369 9.23642C2.43762 8.63751 2.46929 8.05012 2.57871 7.47425C2.68813 6.89837 2.8868 6.34554 3.17474 5.81573C3.45116 5.27441 3.8082 4.79068 4.24586 4.36453C4.68353 3.92687 5.16726 3.56983 5.69706 3.29341C6.22686 3.00547 6.7797 2.80392 7.35558 2.68874C7.93145 2.57357 8.51884 2.54477 9.11775 2.60236C9.71666 2.65995 10.2983 2.80392 10.8626 3.03427C11.4385 3.27613 11.9568 3.5871 12.4175 3.96718C12.8782 4.34726 13.2727 4.78204 13.6009 5.27153C13.9292 5.76102 14.1797 6.29371 14.3524 6.86958C14.5252 7.44545 14.6116 8.0386 14.6116 8.64903C14.6116 9.4898 14.4561 10.2787 14.1451 11.0159C13.8226 11.753 13.3878 12.398 12.8408 12.9508C12.2937 13.5036 11.6516 13.9413 10.9145 14.2638C10.1774 14.5748 9.38841 14.7302 8.54763 14.7302Z" />
-                    </svg>
-                </div>
             </div>
+
+            <button class="header__btn-menu">
+                Menu
+            </button>
     </header>
 
     <main class="layout">
@@ -46,7 +51,7 @@
                 <div class="home-support__card">
 
 
-                    <h2 class="caption">De quoi as-tu besoin d'assistance ?</h2>
+                    <h2 class="caption">De quoi as-tu besoin d'assistance&nbsp;?</h2>
                     <p>Nous sommes là pour vous aider à chaque fois que nécessaire !</p>
 
                     <div class="home-support__links">
@@ -158,7 +163,7 @@
 
                 <div class="footer__col --first">
                     <div class="footer__group">
-                        <h3 class="footer__group-title">Chauffage/Climatisation</h3>
+                        <h3 class="footer__group-title">Chauffage / Climatisation</h3>
                         <!-- links -->
                         <a class="footer__top-link" href="#">Produits</a>
                         <a class="footer__top-link" href="#">Offres</a>
@@ -248,12 +253,13 @@
 
                 <div class="footer__col --last">
                     <div class="footer__group">
-                        <a class="footer__top-link" href="#">Restez connecté</a>
-                        <!-- --2-- -->
-                        <a class="footer__top-link" href="#">Entreprise</a>
-                        <a class="footer__top-link" href="#">Foyers</a>
-                        <a class="footer__top-link" href="#">Barbecues</a>
-                        <a class="footer__top-link" href="#">Chauffage / Climatisation</a>
+                        <a class="footer__top-link" href="#">RESTEZ CONNECTÉ</a>
+                        <hr>
+                        <a class="footer__top-link" href="#">ENTREPRISE</a>
+                        <a class="footer__top-link" href="#">FOYERS</a>
+                        <a class="footer__top-link" href="#">BARBECUES</a>
+                        <a class="footer__top-link" href="#">CHAUFFAGE / CLIMATISATION</a>
+                        <hr>
                     </div>
                 </div>
             </div>
@@ -266,8 +272,8 @@
                     <a href="#">Choix de cookies</a>
                     <a href="#">Accessibilité</a>
                 </div>
-                <div class="footer__bottom-capt">
-                    <p>© Napoleon 2023. Tous droits réservés.</p>
+                <div class="footer__bottom-copy">
+                    © Napoleon 2023. Tous droits réservés.
                 </div>
             </div>
     </footer>
