Task compelete all

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 
 <head>
 
-    <title>Marky | Mef</title>
+    <title>Marky | Adobe</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
@@ -22,19 +24,18 @@
             <div class="adobe__cards">
 
                 <div class="adobe__card">
-                    <div class="adobe__title">
-                        Ps
-                    </div>
-                    <div class="adobe__capt">
-                        <span>FREE</span>
+                    <div class="adobe__title">Ps</div>
+                    <div class="adobe__card-group">
+                        <mark>FREE</mark>
 
                         <p>GIMP</p>
                         <p>Paint.NET</p>
                         <p>Krita</p>
                         <p>Photopea</p>
                         <p>Darktable</p>
-
-                        <span>PAID</span>
+                    </div>
+                    <div class="adobe__card-group">
+                        <mark>PAID</mark>
 
                         <p>Affinity Photo</p>
                         <p>Pixelmator Pro</p>
@@ -42,11 +43,9 @@
                 </div>
 
                 <div class="adobe__card --ae">
-                    <div class="adobe__title --ae">
-                        Ae
-                    </div>
-                    <div class="adobe__capt --ae">
-                        <span>FREE</span>
+                    <div class="adobe__title">Ae</div>
+                    <div class="adobe__card-group">
+                        <mark>FREE</mark>
 
                         <p>DaVinci Resolve</p>
                         <p>Blender</p>
@@ -55,17 +54,16 @@
                 </div>
 
                 <div class="adobe__card --id">
-                    <div class="adobe__title --id">
-                        Id
-                    </div>
-                    <div class="adobe__capt --id">
-                        <span>FREE</span>
+                    <div class="adobe__title">Id</div>
+                    <div class="adobe__card-group">
+                        <mark>FREE</mark>
 
                         <p>Krita</p>
                         <p>Canva</p>
                         <p>Scribus</p>
-
-                        <span>PAID</span>
+                    </div>
+                    <div class="adobe__card-group">
+                        <mark>PAID</mark>
 
                         <p>Affinity Publisher</p>
 
@@ -73,18 +71,17 @@
                 </div>
 
                 <div class="adobe__card --ai">
-                    <div class="adobe__title --ai">
-                        Ai
-                    </div>
-                    <div class="adobe__capt --ai">
-                        <span>FREE</span>
+                    <div class="adobe__title">Ai</div>
+                    <div class="adobe__card-group">
+                        <mark>FREE</mark>
 
                         <p>Inkspace</p>
                         <p>BoxySVG</p>
                         <p>Vectr</p>
                         <p>Krita</p>
-
-                        <span>PAID</span>
+                    </div>
+                    <div class="adobe__card-group">
+                        <mark>PAID</mark>
 
                         <p>Affinity Designer</p>
                         <p>Corel Draw</p>
@@ -92,19 +89,17 @@
                     </div>
                 </div>
 
-                
                 <div class="adobe__card --xd">
-                    <div class="adobe__title --xd">
-                        Xd
-                    </div>
-                    <div class="adobe__capt --xd">
-                        <span>FREE</span>
+                    <div class="adobe__title">Xd</div>
+                    <div class="adobe__card-group">
+                        <mark>FREE</mark>
 
                         <p>Figma</p>
                         <p>Invision</p>
                         <p>Framer</p>
-
-                        <span>PAID</span>
+                    </div>
+                    <div class="adobe__card-group">
+                        <mark>PAID</mark>
 
                         <p>Sketch</p>
 
@@ -112,11 +107,9 @@
                 </div>
 
                 <div class="adobe__card --an">
-                    <div class="adobe__title --an">
-                        An
-                    </div>
-                    <div class="adobe__capt --an">
-                        <span>FREE</span>
+                    <div class="adobe__title">An</div>
+                    <div class="adobe__card-group">
+                        <mark>FREE</mark>
 
                         <p>Soline 3D</p>
                         <p>Pencil 2D</p>
@@ -126,40 +119,31 @@
                 </div>
 
                 <div class="adobe__card --au">
-                    <div class="adobe__title --au">
-                        Au
-                    </div>
-                    <div class="adobe__capt --au">
-                        <span>FREE</span>
+                    <div class="adobe__title">Au</div>
+                    <div class="adobe__card-group --row">
+                        <mark>FREE</mark>
 
-                        <p class="spacer">Audacity</p>
+                        <p>Audacity</p>
                         <p>Tracktion</p>
-                        <p class="spacer">Grageband</p>
+                        <p>Grageband</p>
                         <p>LMMS</p>
 
                     </div>
                 </div>
 
-                <div class="adobe__card --au">
-                    <div class="adobe__title --au">
-                        Dw
-                    </div>
-                    <div class="adobe__capt --au">
-                        <span>FREE</span>
+                <div class="adobe__card --dw">
+                    <div class="adobe__title">Dw</div>
+                    <div class="adobe__card-group --row">
+                        <mark>FREE</mark>
 
-                        <p class="spacer">Brackets</p>
+                        <p>Brackets</p>
                         <p>Subline</p>
-                        <p class="spacer">VS Code</p>
+                        <p>VS Code</p>
                         <p>Atom</p>
-
                     </div>
                 </div>
-
             </div>
-
         </div>
-
-    </div>
 
 </body>
 
