Progress bar complete

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Marky | Adobe</title>
+    <title>Marky | Bar</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -16,134 +16,35 @@
 
     <div class="container">
 
-        <div class="adobe">
-            <div class="adobe__top">
-                Adobe Alternatives
-            </div>
+        <div class="progress">
 
-            <div class="adobe__cards">
+            <div class="bg"></div>
 
-                <div class="adobe__card">
-                    <div class="adobe__title">Ps</div>
-                    <div class="adobe__card-group">
-                        <mark>FREE</mark>
-
-                        <p>GIMP</p>
-                        <p>Paint.NET</p>
-                        <p>Krita</p>
-                        <p>Photopea</p>
-                        <p>Darktable</p>
+            <div class="progress__bar">
+                <div class="progress__path">
+                    <div class="progress__bar-path --1">
+                        <p>Select</p>
                     </div>
-                    <div class="adobe__card-group">
-                        <mark>PAID</mark>
 
-                        <p>Affinity Photo</p>
-                        <p>Pixelmator Pro</p>
+                    <div class="progress__bar-path --2">
+                        <p>Review</p>
+                    </div>
+
+                    <div class="progress__bar-path --3">
+                        <p>Payment</p>
+                    </div>
+
+                    <div class="progress__bar-path --4">
+                        <p>Success</p>
                     </div>
                 </div>
 
-                <div class="adobe__card --ae">
-                    <div class="adobe__title">Ae</div>
-                    <div class="adobe__card-group">
-                        <mark>FREE</mark>
-
-                        <p>DaVinci Resolve</p>
-                        <p>Blender</p>
-
-                    </div>
-                </div>
-
-                <div class="adobe__card --id">
-                    <div class="adobe__title">Id</div>
-                    <div class="adobe__card-group">
-                        <mark>FREE</mark>
-
-                        <p>Krita</p>
-                        <p>Canva</p>
-                        <p>Scribus</p>
-                    </div>
-                    <div class="adobe__card-group">
-                        <mark>PAID</mark>
-
-                        <p>Affinity Publisher</p>
-
-                    </div>
-                </div>
-
-                <div class="adobe__card --ai">
-                    <div class="adobe__title">Ai</div>
-                    <div class="adobe__card-group">
-                        <mark>FREE</mark>
-
-                        <p>Inkspace</p>
-                        <p>BoxySVG</p>
-                        <p>Vectr</p>
-                        <p>Krita</p>
-                    </div>
-                    <div class="adobe__card-group">
-                        <mark>PAID</mark>
-
-                        <p>Affinity Designer</p>
-                        <p>Corel Draw</p>
-
-                    </div>
-                </div>
-
-                <div class="adobe__card --xd">
-                    <div class="adobe__title">Xd</div>
-                    <div class="adobe__card-group">
-                        <mark>FREE</mark>
-
-                        <p>Figma</p>
-                        <p>Invision</p>
-                        <p>Framer</p>
-                    </div>
-                    <div class="adobe__card-group">
-                        <mark>PAID</mark>
-
-                        <p>Sketch</p>
-
-                    </div>
-                </div>
-
-                <div class="adobe__card --an">
-                    <div class="adobe__title">An</div>
-                    <div class="adobe__card-group">
-                        <mark>FREE</mark>
-
-                        <p>Soline 3D</p>
-                        <p>Pencil 2D</p>
-                        <p>Blender</p>
-
-                    </div>
-                </div>
-
-                <div class="adobe__card --au">
-                    <div class="adobe__title">Au</div>
-                    <div class="adobe__card-group --row">
-                        <mark>FREE</mark>
-
-                        <p>Audacity</p>
-                        <p>Tracktion</p>
-                        <p>Grageband</p>
-                        <p>LMMS</p>
-
-                    </div>
-                </div>
-
-                <div class="adobe__card --dw">
-                    <div class="adobe__title">Dw</div>
-                    <div class="adobe__card-group --row">
-                        <mark>FREE</mark>
-
-                        <p>Brackets</p>
-                        <p>Subline</p>
-                        <p>VS Code</p>
-                        <p>Atom</p>
-                    </div>
-                </div>
             </div>
         </div>
+
+        </div>
+
+    </div>
 
 </body>
 
