Complete js math function

--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
 
     <div class="container">
 
-        <div class="main">
+        <section class="main">
             <div class="main__top">
                 Javascript <span>JS</span>
                 <span>Array Method</span>
@@ -51,8 +51,11 @@
                     <div class="main__block --slice">
                         🔵 🟢 🟡 🟠 .slice(2)
                     </div>
+                    <div class="main__block --sort">
+                        1 32 5 12 27 .sort( )
+                    </div>
                 </div>
-                
+
                 <div class="main__second">
                     <div class="main__push">
                     </div>
@@ -72,10 +75,82 @@
                     </div>
                     <div class="main__slice">
                     </div>
+                    <div class="main__sort">
+                    </div>
                 </div>
             </div>
 
-        </div>
+        </section>
+
+        <section class="math">
+            <div class="math__top">
+                <div class="math__title">
+                    Math Functions
+                    <p>in <span>JavaScript</span></p>
+                </div>
+
+                <div class="math__subtitle">Contains a variety of methods for
+                    performing mathematical operations.</div>
+            </div>
+
+            <div class="math__content">
+                <div class="math__first">
+                    <div class="math__block --array">
+                        Numbers
+                    </div>
+                    <div class="math__block --abs">
+                        Math.abs(-10)
+                    </div>
+                    <div class="math__block --cell">
+                        Math.cell(3.2)
+                    </div>
+                    <div class="math__block --floor">
+                        Math.floor(4.7)
+                    </div>
+                    <div class="math__block -max">
+                        Math.max(...numbers)
+                    </div>
+                    <div class="math__block --min">
+                        Math.min(...numbers)
+                    </div>
+                    <div class="math__block --pow">
+                        Math.pow(3, 2)
+                    </div>
+                    <div class="math__block --random">
+                        Math.random()
+                    </div>
+                    <div class="math__block --round">
+                        Math.round(3.7)
+                    </div>
+                    <div class="math__block --sqrt">
+                        Math.sqrt(25)
+                    </div>
+                </div>
+
+                <div class="math__second">
+                    <div class="math__array">
+                    </div>
+                    <div class="math__abs">
+                    </div>
+                    <div class="math__cell">
+                    </div>
+                    <div class="math__floor">
+                    </div>
+                    <div class="math__max">
+                    </div>
+                    <div class="math__min">
+                    </div>
+                    <div class="math__pow">
+                    </div>
+                    <div class="math__random">
+                    </div>
+                    <div class="math__round">
+                    </div>
+                    <div class="math__sqrt">
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </div>
 
