Complete progress all

--- a/index1.html
+++ b/index1.html
@@ -101,7 +101,7 @@
                     <div class="math__block --abs">
                         Math.abs(-10)
                     </div>
-                    <div class="math__block --cell">
+                    <div class="math__block --ceil">
                         Math.cell(3.2)
                     </div>
                     <div class="math__block --floor">
@@ -132,7 +132,7 @@
                     </div>
                     <div class="math__abs">
                     </div>
-                    <div class="math__cell">
+                    <div class="math__ceil">
                     </div>
                     <div class="math__floor">
                     </div>
@@ -150,6 +150,15 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="bottom">
+            <div class="bottom__top">
+                РЕГУЛЯРНЫЕ ВЫРАЖЕНИЕ
+                <br>
+                ⬇️⬇️⬇️
+            </div>
+            <div class="bottom__string"></div>
         </section>
 
     </div>
