--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Marky | JavaScript</title>
+    <title>Marky | JavaSscript</title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -25,7 +25,7 @@
                     имени):</label>
                 <input class="main__input --2" type="text" id="symbol" value="$">
 
-                <button class="button">Send</button>
+                <button class="button">Send </button>
 
                 <div class="results"></div>
             </div>
