--- a/index.html
+++ b/index.html
@@ -14,25 +14,12 @@
 
 <body>
 
-    <div class="container">
+    <button>Open</button>
 
-        <main class="main">
-            <div class="main__username">
-                <label class="main__label">Введите имя: </label>
-                <input class="main__input" type="text" id="username">
-
-                <label class="main__label --2" for="symbol">введите символ <br>(который заменет все числа в
-                    имени):</label>
-                <input class="main__input --2" type="text" id="symbol" value="$">
-
-                <button class="button">Send </button>
-
-                <div class="results"></div>
-            </div>
-        </main>
-
+    <div class="card">
+        <span class="title">Short Content</span>
+        <div class="main">This is much linger content that takes up much more space</div>
     </div>
-
 
     <script src="./js/index.js"></script>
 
